--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </div>
       </div>
     </div>
+    <img src="img/10.jpg" alt="">
     <script src="./js/main.js"></script>
   </body>
 </html>
