--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="col-md-6 m-auto p-0 ">
             <nav class="navbar bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand fw-bolder fs-3 text-dark"><i class="fa-solid fa-book"></i> Staff Directory Ma</a>
+                <a class="navbar-brand fw-bolder fs-3 text-dark"><i class="fa-solid fa-book"></i> Staff Directory</a>
                 <form class="d-flex" role="search">
                   <input class="form-control form-control-lg rounded" type="search" id="search" placeholder="Search" aria-label="Search">
                 </form>
